# azure-assessment

./: Cargo.toml  README.md
files/: Compute.json  Compute_len.json  Databases.json  Databases_len.json  Logging.json  Logging_len.json  Management.json  Management_len.json  Network.json  Network_len.json  Security.json  Security_len.json  Storage.json  Storage_len.json
src/: anormal_funcs.rs  helper.rs  main.rs  normal_funcs.rs
